--- a/src/components/songs-list/_songs-list.style.scss
+++ b/src/components/songs-list/_songs-list.style.scss
@@ -11,7 +11,7 @@
   padding-top: 1rem;
   .song-card {
     display: grid;
-    grid-template-columns: 20% auto auto;
+    grid-template-columns: 20% 70% auto;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
     padding: 1rem 2.5rem;
@@ -35,6 +35,8 @@
   }
   .song-card .card-image {
     width: 100%;
+    height: 80%;
+    object-fit: cover;
     transform-style: preserve-3d;
     transform: translate3d(0, 0, 50px);
     box-shadow: $shadow;
