--- a/src/components/side-bar/_sidebar.scss
+++ b/src/components/side-bar/_sidebar.scss
@@ -1,3 +1,14 @@
+.like-icon {
+  position: fixed;
+  top: 2rem;
+  left: 2rem;
+  cursor: pointer;
+  z-index: 101;
+
+}
+.like-icon:hover {
+  color: white;
+}
 .sidebar {
   position: fixed;
   top: 0;
@@ -10,15 +21,7 @@
   padding-top: 5rem;
   overflow-y: scroll;
 
-  SVG {
-    position: fixed;
-    top: 0.7rem;
-    left: 0.7rem;
-    cursor: pointer;
-  }
-  SVG:hover {
-    color: white;
-  }
+  
 
   .no-fav {
     font-size: 2rem;
